--- a/client/src/components/game_room/page/_gamePage.scss
+++ b/client/src/components/game_room/page/_gamePage.scss
@@ -6,16 +6,18 @@
 #game-page {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   width: 100%;
   height: 100%;
   border: 2px solid white;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 @media screen and (min-width: 840px) {
   #game-page {
     flex-direction: row;
     justify-content: center;
+    overflow: hidden;
     background-color: $color_base;
   }
 }
