--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -237,7 +237,8 @@
 }
 
 #chat_container {
-  height: 13rem;
+  height: 30%;
+  max-height: 13rem;
   width: 100%;
   max-width: 390px;
   border-radius: 5px;
@@ -369,6 +370,7 @@
 @media screen and (min-width: 840px) {
   #chat_container {
     height: 95%;
+    max-height: 100%;
     margin-left: 1rem;
     padding: 0%;
     margin-top: 0.2rem;
@@ -510,10 +512,13 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 100%;
   height: 100%;
   border: 2px solid white;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 @media screen and (min-width: 840px) {
@@ -525,6 +530,7 @@
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    overflow: hidden;
     background-color: #000a1a;
   }
 }
